[Mod] テキスト修正

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <button>追加</button>
     </div>
     <div class="incomplete-area">
-      <p class="title">未完了のTODO</p>
+      <p class="title">未完了のTODOリスト</p>
       <ul>
         <li>
           <div class="list-row">
@@ -30,7 +30,7 @@
       </ul>
     </div>
     <div class="complete-area">
-      <p class="title">完了したTODO</p>
+      <p class="title">完了したTODOリスト</p>
       <ul>
         <li class="list-row">
           <p>TODOでした</p>
