--- a/index.html
+++ b/index.html
@@ -7,25 +7,16 @@
 
   <body>
     <div class="input-area">
-      <input type="text" placeholder="TODOを入力" />
-      <button>追加</button>
+      <input id="add-text" type="text" placeholder="TODOを入力" />
+      <button id="add-button">追加</button>
     </div>
     <div class="incomplete-area">
       <p class="title">未完了のTODOリスト</p>
-      <ul>
-        <li>
-          <div class="list-row">
-            <p>TODOです</p>
-            <button>完了</button>
-            <button>削除</button>
-          </div>
-        </li>
-        <li>
-          <div class="list-row">
-            <p>TODOです</p>
-            <button>完了</button>
-            <button>削除</button>
-          </div>
+      <ul id="incomplete-list">
+        <li class="list-row">
+          <p>TODOです</p>
+          <button>完了</button>
+          <button>削除</button>
         </li>
       </ul>
     </div>
